<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_repeater"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.americanfootballpointcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamAname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/team_A_name"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/team_text_size" />

            <TextView
                android:id="@+id/teamApoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_custom_scores"
                android:layout_marginTop="@dimen/margin_custom_scores"
                android:gravity="center"
                android:text="@string/team_A_score"
                android:textColor="@android:color/white"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:id="@+id/teamAPlusSix"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginRight="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:longClickable="true"

                android:text="+6 points" />

            <Button
                android:id="@+id/teamAPlusThree"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginRight="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:text="+3 points" />

            <Button
                android:id="@+id/teamAPlusTwo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginRight="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:text="+2 points" />

            <Button
                android:id="@+id/teamAPlusOne"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginRight="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:text="+1 points" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamBname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/team_B_name"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/team_text_size" />

            <TextView
                android:id="@+id/teamBpoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_custom_scores"
                android:layout_marginTop="@dimen/margin_custom_scores"
                android:gravity="center"
                android:text="@string/team_B_score"
                android:textColor="@android:color/white"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:id="@+id/teamBPlusSix"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginLeft="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:text="+6 points" />

            <Button
                android:id="@+id/teamBPlusThree"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginLeft="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:text="+3 points" />

            <Button
                android:id="@+id/teamBPlusTwo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginLeft="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:text="+2 points" />

            <Button
                android:id="@+id/teamBPlusOne"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/margin_custom_buttons"
                android:layout_marginLeft="@dimen/margin_custom_buttons"
                android:background="@drawable/bc_button_colors"
                android:text="+1 points" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/bc_button_colors"
            android:onClick="resetPoints"
            android:text="Reset" />
    </LinearLayout>
</LinearLayout>
